// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prints the error as expected 1`] = `
"TODO (rule-id-111) at src/sleepSort.js:4:0
  2 |
  3 | // https://twitter.com/JavaScriptDaily/status/856267407106682880 😇
> 4 | [3, 5, 1, 8, 2, 4, 9, 6, 7].forEach((num) => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ too ridiculous
  5 |   setTimeout(() => console.log(num), num);
  6 | });
  7 |


ERROR (rule-id-111) at src/sleepSort.js:4:0
  2 |
  3 | // https://twitter.com/JavaScriptDaily/status/856267407106682880 😇
> 4 | [3, 5, 1, 8, 2, 4, 9, 6, 7].forEach((num) => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ too ridiculous
  5 |   setTimeout(() => console.log(num), num);
  6 | });
  7 |

"
`;

exports[`prints the warnings first 1`] = `
"TODO (rule-id-111) at src/sleepSort.js:4:0
  2 |
  3 | // https://twitter.com/JavaScriptDaily/status/856267407106682880 😇
> 4 | [3, 5, 1, 8, 2, 4, 9, 6, 7].forEach((num) => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ too ridiculous
  5 |   setTimeout(() => console.log(num), num);
  6 | });
  7 |


TODO (rule-id-111) at src/sleepSort.js:4:0
  2 |
  3 | // https://twitter.com/JavaScriptDaily/status/856267407106682880 😇
> 4 | [3, 5, 1, 8, 2, 4, 9, 6, 7].forEach((num) => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ too ridiculous
  5 |   setTimeout(() => console.log(num), num);
  6 | });
  7 |


TODO (rule-id-111) at src/sleepSort.js:4:0
  2 |
  3 | // https://twitter.com/JavaScriptDaily/status/856267407106682880 😇
> 4 | [3, 5, 1, 8, 2, 4, 9, 6, 7].forEach((num) => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ too ridiculous
  5 |   setTimeout(() => console.log(num), num);
  6 | });
  7 |


TODO (rule-id-111) at src/sleepSort.js:4:0
  2 |
  3 | // https://twitter.com/JavaScriptDaily/status/856267407106682880 😇
> 4 | [3, 5, 1, 8, 2, 4, 9, 6, 7].forEach((num) => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ too ridiculous
  5 |   setTimeout(() => console.log(num), num);
  6 | });
  7 |


ERROR at src/sleepSort.js:3:1
  1 | // @flow strict
  2 |
> 3 | // https://twitter.com/JavaScriptDaily/status/856267407106682880 😇
    | ^ Unused eslint-disable directive (MOCK)
  4 | [3, 5, 1, 8, 2, 4, 9, 6, 7].forEach((num) => {
  5 |   setTimeout(() => console.log(num), num);
  6 | });


ERROR (rule-id-111) at src/sleepSort.js:4:0
  2 |
  3 | // https://twitter.com/JavaScriptDaily/status/856267407106682880 😇
> 4 | [3, 5, 1, 8, 2, 4, 9, 6, 7].forEach((num) => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ too ridiculous
  5 |   setTimeout(() => console.log(num), num);
  6 | });
  7 |


ERROR (rule-id-111) at src/sleepSort.js:4:0
  2 |
  3 | // https://twitter.com/JavaScriptDaily/status/856267407106682880 😇
> 4 | [3, 5, 1, 8, 2, 4, 9, 6, 7].forEach((num) => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ too ridiculous
  5 |   setTimeout(() => console.log(num), num);
  6 | });
  7 |

"
`;

exports[`prints unused eslint-disable directive correctly 1`] = `
"ERROR at src/sleepSort.js:3:1
  1 | // @flow strict
  2 |
> 3 | // https://twitter.com/JavaScriptDaily/status/856267407106682880 😇
    | ^ Unused eslint-disable directive (MOCK)
  4 | [3, 5, 1, 8, 2, 4, 9, 6, 7].forEach((num) => {
  5 |   setTimeout(() => console.log(num), num);
  6 | });

"
`;
